--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,5 +1,12 @@
 <div class="container">
-  <h1>My cocktails</h1>
+  <br>
+  <br>
+  <br>
+  <div class="text-center">
+    <h1>Cocktails For You</h1>
+  </div>
+  <br>
+  <br>
   <div class="cards">
     <% @cocktails.each do |cocktail| %>
       <%= link_to cocktail_path(cocktail) do %>
@@ -11,7 +18,10 @@
   </div>
   <br>
   <br>
-  <div>
+  <div class="text-center">
     <%= link_to "Add another cocktail", new_cocktail_path%>
+    <br>
+    <br>
+    <br>
   </div>
 </div>
