--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,4 +1,4 @@
-<div class=“container”>
+<div class="container mt-5">
   <h1>Add a cocktail</h1>
   <% if @cocktail.errors.any? %>
     <% @cocktail.errors.full_messages.each do |msg| %>
